--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -34,7 +34,7 @@ cfg|app_prefix=o3m-fw-director
 cfg|breadcrums_char=&nbsp; &gt; &nbsp;
 
 #Tiempo de vida de sesiones PHP (segundos)
-cfg|php_session_lifetime=3000
+cfg|php_session_lifetime=20
 
 ###################
 ### E-mail
