Se corrige funcion javasctipt path y se agrega variable global de folder de sistema

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -13,6 +13,7 @@ cfg|encrypt_key=Qwerty12345$.
 cfg|site_title=:: O3M Director ::
 cfg|app_title=O3M Director
 cfg|app_own=Iglesia de Jesucristo Mahanaim Tlalpan
+cfg|app_folder=o3m.director
 cfg|app_link=http://localhost/iglesia/o3m.director
 cfg|php_header=common/php/inc.header.php
 cfg|php_functions=common/php/o3m.functions.php
