Se actualiza timout de sesion

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -35,7 +35,7 @@ cfg|app_prefix=o3m-fw-director
 cfg|breadcrums_char=&nbsp; &gt; &nbsp;
 
 #Tiempo de vida de sesiones PHP (segundos)
-cfg|php_session_lifetime=20
+cfg|php_session_lifetime=3000
 
 ###################
 ### E-mail
