Se comienza con formularios de captura

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -114,6 +114,14 @@ db|tbl_menus=sis_menu
 db|tbl_menus_lateral=sis_menu_lateral
 db|tbl_paises=sis_paises
 
+db|tbl_albums=tbl_albums
+db|tbl_artistas=tbl_artistas
+db|tbl_cantos=tbl_cantos
+db|tbl_categorias=cat_categorias
+db|tbl_ritmos=cat_ritmos
+db|tbl_compases=cat_compases
+db|tbl_escalas=cat_escalas
+db|tbl_notas=cat_notas
 ###################
 ### Variables Extra
 ###################
