Se avanza en catalogos

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -67,6 +67,9 @@ cfg|idioma=MX
 cfg|path_dic_es=html/lang/es.dic
 cfg|path_dic_en=html/lang/en.dic
 
+###################
+### LOG'S | On=>1 Off=>0
+###################
 ## Archivos de Log's | On=>1 Off=>0
 cfg|log_onoff=1
 cfg|path_log=logs/
