Se avanza en albums

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -26,13 +26,20 @@ cfg|path_js=common/js/
 cfg|path_css=common/css/
 cfg|path_img=common/img/
 cfg|path_tmp=tmp/
-cfg|path_docs=docs/
+cfg|path_docs=files/
 cfg|path_html=html/
 cfg|path_src=src/
 cfg|path_site=site/
+cfg|path_covers=covers/
+cfg|path_books=books/
+cfg|path_music=music/
 cfg|app_prefix=o3m-fw-director
 
 cfg|breadcrums_char=&nbsp; &gt; &nbsp;
+
+#Thumbnail 
+cfg|thumb_w=150
+cfg|thumb_h=150
 
 #Tiempo de vida de sesiones PHP (segundos)
 cfg|php_session_lifetime=3000
