--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -33,6 +33,7 @@ cfg|path_site=site/
 cfg|path_covers=covers/
 cfg|path_books=books/
 cfg|path_music=music/
+cfg|path_chords=chords/
 cfg|app_prefix=o3m-fw-director
 
 cfg|breadcrums_char=&nbsp; &gt; &nbsp;
@@ -132,6 +133,7 @@ db|tbl_ritmos=cat_ritmos
 db|tbl_compases=cat_compases
 db|tbl_escalas=cat_escalas
 db|tbl_notas=cat_notas
+db|tbl_acordes=cat_acordes
 ###################
 ### Variables Extra
 ###################
