Se termina cifrados. Captura al 100%

--- a/common/cfg/system.cfg
+++ b/common/cfg/system.cfg
@@ -128,6 +128,7 @@ db|tbl_paises=sis_paises
 db|tbl_albums=tbl_albums
 db|tbl_artistas=tbl_artistas
 db|tbl_cantos=tbl_cantos
+db|tbl_cifrados=tbl_cifrados
 db|tbl_categorias=cat_categorias
 db|tbl_ritmos=cat_ritmos
 db|tbl_compases=cat_compases
